[package]
name = "ruspiro-error"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0"
description = """
Definition of the Error trait and error handling related types to make error handling more convinient.
This is some kind of the duplicate of the rust ``std::error::*`` stuff which does not work in ``#![no_std]``
environments. However, it is assumed that if this crate is used as a dependencie there will be an allocator
provided when building the final binary.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-error/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-error/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "error", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[lib]

[dependencies]

[features]
ruspiro_pi3 = [ ]

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none", "aarch64-unknown-linux-gnu"]
features = [
    "ruspiro_pi3"
]

[patch.crates-io]
