[package]
name = "ruspiro-error"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.1"
description = """
Definition of the Error trait and error handling related types to make error handling more convinient.
This is some kind of the duplicate of the rust ``std::error::*`` stuff which does not work in ``#![no_std]``
environments. However, it is assumed that if this crate is used as a dependencie there will be an allocator
provided when building the final binary.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-error/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-error/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "error", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-error" }

[lib]

[dependencies]

[features]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = []

[patch.crates-io]
